# NoteDirectory

./: README.md  footer.md  main.py  pyproject.toml
attempts/: sept11_13h44
src/: cache_testing.ipynb  classes.py  daily_note_org.py  functions.py  main.py  split_testing.ipynb  summary_testing.ipynb
test_media/: 2023-10-17.md  2024-09-03.md
